Implement Basic Customer CURD handler and swagger
