# module/customer/delivery/http/http.go
@@ -4,6 +4,7 @@ import (
 	"crms/model"
 	"crms/module/customer"
 	"github.com/gin-gonic/gin"
+	"strconv"
 )
 
 type CustomerHandler struct {
@@ -17,6 +18,8 @@ func NewCustomerHandler(e *gin.Engine, ser customer.Service) {
 	e.GET("/api/customerList", handler.GetCustomerList)
 	e.GET("/api/customer", handler.GetCustomer)
 	e.POST("/api/customer", handler.CreateCustomer)
+	e.PUT("/api/customer", handler.ModifyCustomer)
+	e.DELETE("/api/customer", handler.DeleteCustomer)
 }
 
 // GetCustomerList @Summary GetCustomerList
@@ -77,7 +80,7 @@ func (u *CustomerHandler) GetCustomer(c *gin.Context) {
 func (u *CustomerHandler) CreateCustomer(c *gin.Context) {
 	json := model.Customer{}
 	if err := c.BindJSON(&json); err != nil {
-		c.JSON(500, gin.H{
+		c.JSON(400, gin.H{
 			"Message": err.Error(),
 		})
 		return
@@ -85,6 +88,11 @@ func (u *CustomerHandler) CreateCustomer(c *gin.Context) {
 	createCustomer, err := u.ser.CreateCustomer(&json)
 	if err != nil {
 		if err.Error() == "error CRMS : This customer is already existed" {
+			c.JSON(200, gin.H{
+				"Message": err.Error(),
+			})
+			return
+		} else if err.Error() == "error CRMS : Customer Info is incomplete" {
 			c.JSON(200, gin.H{
 				"Message": err.Error(),
 			})
@@ -98,4 +106,75 @@ func (u *CustomerHandler) CreateCustomer(c *gin.Context) {
 	}
 
 	c.JSON(200, createCustomer)
+}
+
+// ModifyCustomer @Summary ModifyCustomer
+// @Description Modify Customer
+// @Tags Customer
+// @Accept json
+// @Produce application/json
+// @Param Customer body model.Customer true "Customer Information"
+// @Success 200 {object} model.Customer
+// @Failure 500 {string} string "{"Message": err.Error()}"
+// @Router /customer [put]
+func (u *CustomerHandler) ModifyCustomer(c *gin.Context) {
+	json := model.Customer{}
+	if err := c.BindJSON(&json); err != nil {
+		c.JSON(400, gin.H{
+			"Message": err.Error(),
+		})
+		return
+	}
+	modifyCustomer, err := u.ser.UpdateCustomer(&json)
+	if err != nil {
+		if err.Error() == "error CRMS : There is no this customer" {
+			c.JSON(200, gin.H{
+				"Message": err.Error(),
+			})
+			return
+		} else if err.Error() == "error CRMS : Customer Info is incomplete" {
+			c.JSON(200, gin.H{
+				"Message": err.Error(),
+			})
+			return
+		} else {
+			c.JSON(500, gin.H{
+				"Message": err.Error(),
+			})
+			return
+		}
+	}
+	c.JSON(200, gin.H{
+		"Customer info": modifyCustomer,
+		"Message":       "Modify success",
+	})
+}
+
+// DeleteCustomer @Summary DeleteCustomer
+// @Description DeleteCustomer by  CustomerId
+// @Tags Customer
+// @Produce application/json
+// @Param CustomerId query string true "Customer Id"
+// @Success 200 {object} string "Message": "Delete success"
+// @Failure 500 {string} string "{"Message": err.Error()}"
+// @Router /customer [delete]
+func (u *CustomerHandler) DeleteCustomer(c *gin.Context) {
+	CustomerId, _ := strconv.Atoi(c.Query("CustomerId"))
+	err := u.ser.DeleteCustomer(CustomerId)
+	if err != nil {
+		if err.Error() == "error CRMS : There is no this customer" {
+			c.JSON(200, gin.H{
+				"Message": err.Error(),
+			})
+			return
+		} else {
+			c.JSON(500, gin.H{
+				"Message": err.Error(),
+			})
+			return
+		}
+	}
+	c.JSON(200, gin.H{
+		"Message": "Delete success",
+	})
 }
